# agentdeck

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
agentdeck/: __init__.py  __main__.py  server.py
agentdeck/static/: index.html
scripts/: agentdeck_watchdog.py  install_watchdog_task.bat  terminal_torture.py
tests/: __init__.py  test_run.py  test_server.py  test_watchdog.py
